--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server -d --inline --open"
+    "start": "webpack-dev-server -d --open"
   },
   "keywords": [],
   "author": "",
